<resources>
    <string name="app_name">Test</string>
    <string name="sign_in_heading">Вход в личный кабинет</string>
    <string name="find_work_string">Поиск работы</string>
    <string name="find_workers_title">Поиск сотрудников</string>
    <string name="find_workers_string">размещение вакансий и доступ к базе резюме</string>
    <string name="continue_button">Продолжить</string>
    <string name="password_login_button">Войти с паролем</string>
    <string name="find_workers_button_text">Я ищу сотрудников</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_sent">Отправили код на</string>
    <string name="verification_text">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="prove_button">Подтвердить</string>
    <string name="reply_button">Откликнуться</string>
    <string name="vacancy_title_text">Вакансии для вас</string>
    <string name="text_resume">Резюме для отклика</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_favourite">Избранное</string>
    <string name="menu_invites">Отклики</string>
    <string name="profile">Профиль</string>
    <string name="signed_key">signed</string>
    <string name="date_signed_key">date_signed</string>
</resources>